--- a/medp285/index.html
+++ b/medp285/index.html
@@ -22,5 +22,18 @@
         <li><a href="https://google.com" target="_blank">Google</a></li>
   	  </ul>
   	</nav>
+    <hr>
+
+    <header id="home">
+      <h1>Main Title</h1>
+      <img src="img/header.jpg">
+      <p>This is a repository of works created in MEDP285</p>
+    </header>
+    <hr>
+    
+    <section id="about">
+      <h2>Creative Statement</h2>
+      <p>Through this fall 2018, I will be creating interesting web contents in my MEDP 285 course.</p>      
+    </section>
   </body>
 </html>
