Completed Assignment 1 slide show, also modified first home page to link to various MEDP classes, gonna need to add old site from begining course on there.

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 		<div id="outline">
 			<img src="images/gradient.jpg" alt="" height="304" width="800" border="0" />
 			<div id="title">
-				<h3>Your website.</h3>
+				<h3>Hunter College MEDP<br/>By Yi Zong Kuang</h3>
 			</div>
 			<div id="caption">
-				<h1>Create and publish your own website quickly and easily using iWeb, Pages, and many other applications available<br />
-					for Mac OS X.</h1>
+				<h1>On the right hand side are links to various websites that I made for various classes</h1>
 			</div>
 			<div id="text">
-				<p>It’s a snap to create and publish your own website from your Mac. When your site is ready, it’s just as easy to publish it.</p>
-				<p>Open System Preferences and click Sharing, then select Web Sharing.</p>
-				<p>You’re done. Your site is now available on your private network at home or work.</p>
-				<p>If you’re connected to the Internet, your website can also be available to friends everywhere. Just send them the address shown in Sharing preferences.</p>
-				<h2>Apache Power</h2>
-				<p>Web Sharing is built on the <a href="http://www.apache.org/httpd">Apache</a> web server, an industry standard technology included with Mac OS X. For more information about the Apache web server, see the <a href="/manual/">Apache manual</a>.</p>
+				<!-- Navigation -->
+  				<nav>
+  	  				<ul>
+					<p>MEDP 285 Web Production</p>
+  	  				<li><a href="medp285/index.html">Web Production</a></li>
+  	  				</ul>
+  				</nav>
 			</div>
 			
 		</div>
