--- a/medp285/index.html
+++ b/medp285/index.html
@@ -6,7 +6,7 @@
 
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
-  	<meta name="description content="Home Page for web Production 1">
+  	<meta name="description" content="Home Page for web Production 1">
   	<meta nam="author" content="Yi Zong Kuang">
 
   	<link rel="icon" type=img/ico.gif href="img/ico.gif">
@@ -17,9 +17,8 @@
   	<nav>
   	  <ul>
   	  	<li><a href="index.html">HOME</a></li>
-        <li><a href="">Projects</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="https://google.com" target="_blank">Google</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="https://yizongk.wordpress.com/">Blog</a></li>
   	  </ul>
   	</nav>
     <hr>
