changed the formats a little bit in the html code, purpose of this push is to back up to be worked at brrokdale

--- a/medp285/index.html
+++ b/medp285/index.html
@@ -12,53 +12,33 @@
 		<!-- Navigation -->
 		<nav>
 			<ul>
-				<li><a href="#home">Home</a></li>
-				<li><a href="../index.html">Main Home</a></li>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="index.html">Medp285 Home</a></li>
+        		<li><a href="projects.html">Projects</a></li>
+        		<li><a href="https://yizongk.wordpress.com/">Blog</a></li>
 			</ul>
 		</nav>
 
 		<!-- Home -->
 		<header id="home">
-			<video controls loop poster="video/thumbnails/gob.png">
-				<source src="video/gob.mp4" type="video/mp4">
-				<source src="video/gob.webm" type="video/webm">
-			</video>
+			<p>This is a repository of works created in MEDP285</p>
+			<hr>
 		</header>
 
 		<!-- About -->
 		<section id="about">
 			<h1>Yi Zong Kuang</h1>
-			<p>Some thing will be written here</p>
+			<h2>Creative Statement</h2>
+      		<p>Through this fall 2018, I will be creating interesting web contents in my MEDP 285 course.</p>    
 		</section>
 
-		<!-- Project -->
-		<section id="project">
-			<h1>Slideshow</h1>
-			<p>These are photos taken at the begining of September 2018 capturing trees and leaves in central park: <a href="slideshow.html" target="_blank">Slideshow Excercise</a></p>
+		<!-- Trivial -->
+		<section id="entertainment">
+			<video controls loop poster="video/thumbnails/gob.png">
+				<source src="video/gob.mp4" type="video/mp4">
+				<source src="video/gob.webm" type="video/webm">
+			</video>
 		</section>
-
-		<table border="1">
-			<tr>
-				<th>Title</th>
-				<th>Company</th>
-				<th>Gross</th>
-			</tr>
-			<tr>
-				<td>Solo: A Star Wars Story</td>
-				<td>Disney</td>
-				<td>$29.4</td>
-			</tr>
-			<tr>
-				<td>Kenobi: A Star Wars Story</td>
-				<td>Disney</td>
-				<td>$79.4</td>
-			</tr>
-			<tr>
-				<td>The Room</td>
-				<td>Paramount</td>
-				<td>$2.4</td>
-			</tr>
-		</table>
 
 		<!-- Footer -->
 		<footer id="contact">
