--- a/medp285/projects.html
+++ b/medp285/projects.html
@@ -16,7 +16,7 @@
   	<!-- Navigation -->
   	<nav>
   	  <ul>
-  	  	<li><a href="index.html">HOME</a></li>
+  	  	<li><a href="index.html">Medp285 Home</a></li>
         <li><a href="slideshow.html">Assignment 1: Slides Shows with Javascripts, css and html</a></li>
   	  </ul>
   	</nav>
