--- a/medp285/slideshow.html
+++ b/medp285/slideshow.html
@@ -1,116 +1,118 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- https://www.w3schools.com/howto/howto_js_slideshow.asp -->
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- https://www.w3schools.com/howto/howto_js_slideshow.asp -->
 
-<style>
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
+    <style>
+      body {font-family: Verdana, sans-serif;}
+      .mySlides {display: none;}
+      img {vertical-align: middle;}
 
-/* Slideshow container */
-.slideshow-container {
-  width: 100%;
-  margin: auto;
-}
+      /* Slideshow container */
+      .slideshow-container {
+        width: 100%;
+        margin: auto;
+      }
 
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
+      /* Fading animation */
+      .fade {
+        animation-name: fade;
+        animation-duration: 1.5s;
+      }
 
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-</style>
+      @keyframes fade {
+        from {opacity: .4}
+        to {opacity: 1}
+      }
+    </style>
 
-</head>
+    <!-- Navigation -->
+    <nav>
+      <ul>
+        <li><a href="index.html">Medp285 Home</a></li>
+      </ul>
+    </nav>
 
-<body>
+    <p>This is assignment 1 of Medp185 about a slideshow</p>
+    <hr>
+  </head>
 
-<!-- Navigation -->
-<nav>
-  <ul>
-    <li><a href="index.html">HOME</a></li>
-  </ul>
-</nav>
-<hr>
+  <body>
+    <h1>These are photos taken at the begining of September 2018 capturing trees and leaves in central park</h1>
 
-<div class="slideshow-container">
+    <div class="slideshow-container">
 
-  <div class="mySlides fade">
-    <img src="img/0.jpg" style="width:100%">
-  </div>
+      <div class="mySlides fade">
+        <img src="img/0.jpg" style="width:100%">
+      </div>
 
-  <div class="mySlides fade">
-    <img src="img/1.jpg" style="width:100%">
-  </div>
+      <div class="mySlides fade">
+        <img src="img/1.jpg" style="width:100%">
+      </div>
 
-  <div class="mySlides fade">
-    <img src="img/2.jpg" style="width:100%">
-  </div>
+      <div class="mySlides fade">
+        <img src="img/2.jpg" style="width:100%">
+      </div>
 
-  <div class="mySlides fade">
-    <img src="img/3.jpg" style="width:100%">
-  </div>
+      <div class="mySlides fade">
+        <img src="img/3.jpg" style="width:100%">
+      </div>
 
-  <div class="mySlides fade">
-    <img src="img/4.jpg" style="width:100%">
-  </div>
+      <div class="mySlides fade">
+        <img src="img/4.jpg" style="width:100%">
+      </div>
 
-  <div class="mySlides fade">
-    <img src="img/5.jpg" style="width:100%">
-  </div>
+      <div class="mySlides fade">
+        <img src="img/5.jpg" style="width:100%">
+      </div>
 
-  <div class="mySlides fade">
-    <img src="img/6.jpg" style="width:100%">
-  </div>
+      <div class="mySlides fade">
+        <img src="img/6.jpg" style="width:100%">
+      </div>
 
-  <div class="mySlides fade">
-    <img src="img/7.jpg" style="width:100%">
-  </div>
+      <div class="mySlides fade">
+        <img src="img/7.jpg" style="width:100%">
+      </div>
 
-  <div class="mySlides fade">
-    <img src="img/8.jpg" style="width:100%">
-  </div>
+      <div class="mySlides fade">
+        <img src="img/8.jpg" style="width:100%">
+      </div>
 
-  <div class="mySlides fade">
-    <img src="img/9.jpg" style="width:100%">
-  </div>
+      <div class="mySlides fade">
+        <img src="img/9.jpg" style="width:100%">
+      </div>
 
-</div>
+    </div>
 
-<script>
-// create variable to index the slides - to track
-var slideIndex = 0;
-// call a function that does something with the slides
-showSlides();
+    <script>
+        // create variable to index the slides - to track
+      var slideIndex = 0;
+        // call a function that does something with the slides
+      showSlides();
 
-function showSlides() {
-    // a variable to be used with the for loop
-    var i;
-    // target the slides in the DOM as slides
-    var slides = document.getElementsByClassName("mySlides");
-    // loop through the slides showing them one at a time (display)
-    for (i = 0; i < slides.length; i++) {
-      console.log(`forloop ran with i ${i} slides.length ${slides.length}`);
-      slides[i].style.display = "none";  // Make it go away on browser so images doesn't become a scroll down list of images.
-    }
-    // increment the slides from 0 to the total number of slides (for loop)
-    console.log(`slideIndex: ${slideIndex} slides.length: ${slides.length}`);
-    slideIndex++;
-    // loop back to the beginning
-    if (slideIndex > slides.length) {slideIndex = 1}
+      function showSlides() {
+          // a variable to be used with the for loop
+        var i;
+          // target the slides in the DOM as slides
+        var slides = document.getElementsByClassName("mySlides");
+          // loop through the slides showing them one at a time (display)
+        for (i = 0; i < slides.length; i++) {
+          console.log(`forloop ran with i ${i} slides.length ${slides.length}`);
+          slides[i].style.display = "none";  // Make it go away on browser so images doesn't become a scroll down list of images.
+        }
+          // increment the slides from 0 to the total number of slides (for loop)
+        console.log(`slideIndex: ${slideIndex} slides.length: ${slides.length}`);
+        slideIndex++;
+          // loop back to the beginning
+        if (slideIndex > slides.length) {slideIndex = 1}
     
-    // Sets the previous img in the array to be shown in block format.
-    slides[slideIndex-1].style.display = "block";
-    console.log("This ran");
-    setTimeout(showSlides, 2000); // Change image every 2 seconds, call it self recursively
-}
-</script>
+          // Sets the previous img in the array to be shown in block format.
+        slides[slideIndex-1].style.display = "block";
+        console.log("This ran");
+        setTimeout(showSlides, 2000); // Change image every 2 seconds, call it self recursively
+      }
+    </script>
 
-</body>
+  </body>
 </html>
