Separated some css and js from html

--- a/medp285/projects.html
+++ b/medp285/projects.html
@@ -9,7 +9,9 @@
   	<meta name="description" content="links for various projects and assignments">
   	<meta nam="author" content="Yi Zong Kuang">
 
-  	<link rel="icon" type=img/ico.gif href="img/ico.gif">
+		<!-- icon that is displayed in tabs -->
+		<link rel="icon" type=img/ico.gif href="img/ico.gif">
+		<hr>
   </head>
 
   <body>
@@ -19,7 +21,8 @@
   	  	<li><a href="index.html">Medp285 Home</a></li>
         <li><a href="slideshow.html">Assignment 1: Slides Shows with Javascripts, css and html</a></li>
   	  </ul>
-  	</nav>
+		</nav>
+		<p>List of projects and assignment done by me in Medp285 Web Production</p>
     <hr>
   </body>
 </html>
