Hopefully commit works now, i reorganized many things

--- a/medp285/index.html
+++ b/medp285/index.html
@@ -7,13 +7,13 @@
 		<meta name="description" content="Home page for Web Production 1">
 		<meta name="author" content="Yi Zong Kuang">
 
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="master.css">
 
 		<picture>
-			<source media="(min-width: 1280px)" src="img/happy-music-1280w.jpg">
-			<source media="(min-width: 960px)" src="img/happy-music-960w.jpg">
-			<source media="(min-width: 480px)" src="img/happy-music-480w.jpg">
-			<img src="img/happy-music-1280w.jpg" alt="Happy face header image for front page of medp285" style="width:auto">
+			<source media="(min-width: 1280px)" srcset="image/happy-music-1280w.jpg">
+			<source media="(min-width: 960px)" srcset="image/happy-music-960w.jpg">
+			<source media="(min-width: 480px)" srcset="image/happy-music-480w.jpg">
+			<img src="image/happy-music-1280w.jpg" alt="Happy face header image for front page of medp285" style="width:auto">
 		</picture>
 	</head>
 
@@ -21,13 +21,14 @@
 		<!-- Navigation -->
 		<nav>
 			<ul>
-				<li><a href="../index.html">Home</a></li>
-        		<li class="dropdown"><a href="projects.html">Projects</a>
+				<li><a href="../index.html">Medp Home</a></li>
+				<li><a href="index.html">Home</a></li>
+        		<li class="dropdown">Projects
         			<div class="dropdown-content">
-        				<a href="slideshow.html" target="_blank">Slideshow</a>
-        				<a href="videoPage.html" target="_blank">Video</a>
-						<a href="responsiveimg.html" target="_blank">Responsive Image</a>
-						<a href="typography.html"target="_blank">CSS Typography: Text, Color, Float</a>
+        				<a href="slideshow.html">Slideshow</a>
+        				<a href="videoPage.html">Video</a>
+						<a href="responsiveimg.html">Responsive Image</a>
+						<a href="typography.html">CSS Typography: Text, Color, Float</a>
         			</div>
         		</li>
         		<li><a href="https://yizongk.wordpress.com/" target="_blank">Blog</a></li>
