--- a/medp285/responsiveimg.html
+++ b/medp285/responsiveimg.html
@@ -5,17 +5,35 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="index.css">
-
-		<picture>
-			<source media="(min-width: 1280px)" src="img/happy-music-1280w.jpg">
-			<source media="(min-width: 960px)" src="img/happy-music-960w.jpg">
-			<source media="(min-width: 480px)" src="img/happy-music-480w.jpg">
-			<img src="img/happy-music-1280w.jpg" alt="Happy face header image for front page of medp285" style="width:auto">
-		</picture>
+        <link rel="stylesheet" href="master.css">
     </head>
 
     <body> 
-        <h1>The image will change size according to the screen size you are viewing though!</h1>
+        <!-- Navigation -->
+		<nav>
+            <ul>
+                <li><a href="../index.html">Medp Home</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="dropdown">Projects
+                    <div class="dropdown-content">
+                        <a href="slideshow.html">Slideshow</a>
+                        <a href="videoPage.html">Video</a>
+                        <a href="responsiveimg.html">Responsive Image</a>
+                        <a href="typography.html">CSS Typography: Text, Color, Float</a>
+                    </div>
+                </li>
+                <li><a href="https://yizongk.wordpress.com/" target="_blank">Blog</a></li>
+            </ul>
+            <h1>The image will change size according to the screen size you are viewing though!</h1>
+        </nav>
+
+        
+
+        <picture>
+            <source media="(min-width: 1280px)" srcset="image/happy-music-1280w.jpg">
+			<source media="(min-width: 960px)" srcset="image/happy-music-960w.jpg">
+            <source media="(min-width: 480px)" srcset="image/happy-music-480w.jpg">
+			<img src="image/happy-music-1280w.jpg" alt="Happy face header image for front page of medp285" style="width:auto">
+		</picture>
     </body>
 </html>
