--- a/medp285/slideshow.html
+++ b/medp285/slideshow.html
@@ -7,10 +7,21 @@
     <link rel="stylesheet" href="slideshow.css">
 
     <!-- Navigation -->
-    <nav>
-      <ul>
-        <li><a href="index.html">Medp285 Home</a></li>
-      </ul>
+		<nav>
+        <ul>
+            <li><a href="../index.html">Medp Home</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="dropdown">Projects
+                <div class="dropdown-content">
+                    <a href="slideshow.html">Slideshow</a>
+                    <a href="videoPage.html">Video</a>
+                    <a href="responsiveimg.html">Responsive Image</a>
+                    <a href="typography.html">CSS Typography: Text, Color, Float</a>
+                </div>
+            </li>
+            <li><a href="https://yizongk.wordpress.com/" target="_blank">Blog</a></li>
+        </ul>
+        <h1>The image will change size according to the screen size you are viewing though!</h1>
     </nav>
 
     <p>This is assignment 1 of Medp185 about a slideshow</p>
@@ -23,43 +34,43 @@
     <div class="slideshow-container">
 
       <div class="mySlides fade">
-        <img src="img/0.jpg" style="width:100%">
+        <img src="image/0.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="img/1.jpg" style="width:100%">
+        <img src="image/1.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="img/2.jpg" style="width:100%">
+        <img src="image/2.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="img/3.jpg" style="width:100%">
+        <img src="image/3.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="img/4.jpg" style="width:100%">
+        <img src="image/4.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="img/5.jpg" style="width:100%">
+        <img src="image/5.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="img/6.jpg" style="width:100%">
+        <img src="image/6.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="img/7.jpg" style="width:100%">
+        <img src="image/7.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="img/8.jpg" style="width:100%">
+        <img src="image/8.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="img/9.jpg" style="width:100%">
+        <img src="image/9.jpg" style="width:100%">
       </div>
 
     </div>
