Did this week's assignement, can finally sleep peace now

--- a/medp285/slideshow.html
+++ b/medp285/slideshow.html
@@ -17,6 +17,7 @@
                     <a href="videoPage.html">Video</a>
                     <a href="responsiveimg.html">Responsive Image</a>
                     <a href="typography.html">CSS Typography: Text, Color, Float</a>
+                    <a href="grid.html">Grid System</a>
                 </div>
             </li>
             <li><a href="https://yizongk.wordpress.com/" target="_blank">Blog</a></li>
