--- a/medp285/index.html
+++ b/medp285/index.html
@@ -29,6 +29,7 @@
         				<a href="videoPage.html">Video</a>
 						<a href="responsiveimg.html">Responsive Image</a>
 						<a href="typography.html">CSS Typography: Text, Color, Float</a>
+						<a href="grid.html">Grid System</a>
         			</div>
         		</li>
         		<li><a href="https://yizongk.wordpress.com/" target="_blank">Blog</a></li>
