Linked overall animation html to index html

--- a/medp285/index.html
+++ b/medp285/index.html
@@ -30,6 +30,7 @@
 						<a href="responsiveimg.html">Responsive Image</a>
 						<a href="typography.html">CSS Typography: Text, Color, Float</a>
 						<a href="grid.html">Grid System</a>
+						<a href="overallAnimation.html" target="_blank">Group Animation Effort: Dream On</a>
         			</div>
         		</li>
         		<li><a href="https://yizongk.wordpress.com/" target="_blank">Blog</a></li>
