Giving credit to my two class mate who contributed to our animation group effort

--- a/medp285/overallAnimation.html
+++ b/medp285/overallAnimation.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-
+<!-- 
+	This is a group effort between 3 people, me (Yi Zong Kuang), Matthew Ko Carbonell, and Jungyun Jang.
+	We are part of Hunter College MEDP 285 Web Production course.
+ -->
 <head>
     <link rel="stylesheet" href="overallAnimation.css">
 </head>
