--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -3,9 +3,11 @@
 	<head>
 		<title>Mazy Game</title>
 		<link rel="stylesheet" href="maze.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<script type="text/javascript" src="maze.js"></script>
+		
 
 
 
