added Jquary to edit a div in html with content of the game

--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -5,10 +5,18 @@
 		<link rel="stylesheet" href="maze.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	</head>
-	<body>
+	<body> 
 		<script type="text/javascript" src="maze.js"></script>
 		
+		<div id="gameViewPort">
+			Intial
+			<br>
+		</div>
 
+		<div id="chatHistory">
+			Initial chat box
+			<br>
+		</div>
 
 
 		<!-- <div class="gamebox">
