added chat box functionality, will now work on visual part of the game, filling the tiles

--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -13,11 +13,23 @@
 			<br>
 		</div>
 
-		<div id="chatHistory">
+		<br>
+		~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+		<br>
+
+		<div id="chatLog">
 			Initial chat box
 			<br>
 		</div>
 
+		<!-- <br>    // Will implement late on.
+		~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+		<br>
+
+		<div id="chatHistory">
+			Initial chat history
+		</div>
+ -->
 
 		<!-- <div class="gamebox">
 			<div class="row"></div>
