Chat history showing also works now

--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -8,6 +8,15 @@
 	<body> 
 		<script type="text/javascript" src="maze.js"></script>
 		
+		<div id="playerList">
+			Intial Playervlist
+			<br>
+		</div>
+
+		<br>
+		~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+		<br>
+
 		<div id="gameViewPort">
 			Intial
 			<br>
@@ -22,14 +31,15 @@
 			<br>
 		</div>
 
-		<!-- <br>    // Will implement late on.
+		<br>    
 		~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 		<br>
 
+		<input id="chatHistoryButton" type="button" value="release dark log">
 		<div id="chatHistory">
 			Initial chat history
 		</div>
- -->
+
 
 		<!-- <div class="gamebox">
 			<div class="row"></div>
