--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -9,8 +9,8 @@
 		<script type="text/javascript" src="maze.js"></script>
 		
 		<div id="playerList">
-			Intial Playervlist
-			<br>
+			Players:
+			<hr>
 		</div>
 
 		<br>
@@ -27,7 +27,7 @@
 		<br>
 
 		<div id="chatLog">
-			Initial chat box
+			Chat Box
 			<hr>
 		</div>
 
