--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -35,7 +35,7 @@
 		~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 		<br>
 
-		<input id="chatHistoryButton" type="button" value="release dark log">
+		<button id="chatHistoryButton"> release dark log </button>
 		<div id="chatHistory">
 			Initial chat history
 		</div>
