overhual to displaying the game, or rather drawing the game. I followed through a tutorial on a website, and the link was send to me by my professor Miranda Ricardo of Hunter College MEDP. Using Canvas div for HRML to help me draw the map and stuff. Modified ValidMove() to use new coor to test out move before giving that coor to the player class to set its x and y. And also changed some minor stuff, not worth mentioning.

--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -18,8 +18,8 @@
 		<br>
 
 		<div id="gameViewPort">
-			Intial
-			<br>
+			<canvas id="map"></canvas>
+			<canvas id="mapObjects"></canvas>
 		</div>
 
 		<br>
