fixed all cap input into text. made a input box for text. hopefully all other future implementation will go smooth

--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -30,13 +30,16 @@
 			Chat Box
 			<hr>
 		</div>
+		
+		<input id="chatInputBox" type="text" placeholder="type here!">
+		
 
 		<br>    
 		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 		<br>
 
 		<button id="chatHistoryButton"> release dark log </button>
-		
+
 		<div id="chatHistory">
 			Initial chat history
 		</div>
