a mess of css, got to fix tomorrow in class

--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -26,12 +26,17 @@
 		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 		<br>
 
-		<div id="chatLog">
+		<div id="chatLogContainer">
 			Chat Box
 			<hr>
+			<div id="chatLog">
+
+			</div>
+			<hr>
+			<input id="chatInputBox" type="text" placeholder="type here!">
 		</div>
 		
-		<input id="chatInputBox" type="text" placeholder="type here!">
+		
 		
 
 		<br>    
