added linking to index for final project

--- a/medp285/index.html
+++ b/medp285/index.html
@@ -31,6 +31,7 @@
 						<a href="typography.html">CSS Typography: Text, Color, Float</a>
 						<a href="grid.html">Grid System</a>
 						<a href="overallAnimation.html" target="_blank">Group Animation Effort: Dream On</a>
+						<a href="finalproject/maze.html">Final Project: A Maze Game Room</a>
         			</div>
         		</li>
         		<li><a href="https://yizongk.wordpress.com/" target="_blank">Blog</a></li>
