updated css to maze game to look better aligned, not using grid view, it seems to be fucking the visual up more. Also added .gitignore to ignore those stupid .DS_STORE

--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -27,12 +27,16 @@
 		<br>
 
 		<div id="chatLogContainer">
-			Chat Box
+			<div id="chatLogTitle">
+				Chat Box
+			</div>
 			<hr>
+
 			<div id="chatLog">
 
 			</div>
 			<hr>
+
 			<input id="chatInputBox" type="text" placeholder="type here!">
 		</div>
 		
@@ -43,11 +47,13 @@
 		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 		<br>
 
-		<button id="chatHistoryButton"> release dark log </button>
-
-		<div id="chatHistory">
-			Initial chat history
+		<div id="chatHistryContainer">
+			<button id="chatHistoryButton"> release dark log </button>
+			<div id="chatHistory">
+				Initial chat history
+			</div>
 		</div>
+		
 
 
 
