Added some pop up msg and button for when game is won. ALso added some css to give some visual looks to those popups

--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -7,6 +7,14 @@
 	</head>
 	<body> 
 		<script type="text/javascript" src="maze.js"></script>
+
+		<div id="popup">
+			<div id="popupMsg">You won! What do you want to do?</div>
+			<div id="popupButtons">
+				<button id="popupStay">Stay on game</button>
+				<button id="popupRestart">Start a new game</button>
+			</div>
+		</div>
 		
 		<div id="playerList">
 			Players:
