--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="maze.js"></script>
 
 		<div id="popup">
-			<div id="popupMsg">You won! What do you want to do?</div>
+			<div id="popupMsg">You won! What do you want to do? Choosing to restart will not delete chat log!</div>
 			<div id="popupButtons">
 				<button id="popupStay">Stay on game</button>
 				<button id="popupRestart">Start a new game</button>
