added ray tracing and images to give it rendering

--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -24,6 +24,14 @@
 		<br>
 		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 		<br>
+		
+		<div id="screen"></div>
+		<div id="floor"></div>
+		<div if="ceiling"></div>
+
+		<br>
+		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+		<br>
 
 		<div id="gameViewPort">
 			<canvas id="map"></canvas>
