fixed viusal half cut off

--- a/medp285/finalproject/maze.html
+++ b/medp285/finalproject/maze.html
@@ -25,9 +25,10 @@
 		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 		<br>
 		
-		<div id="screen"></div>
-		<div id="floor"></div>
-		<div if="ceiling"></div>
+		<div id="screen">
+			<div id="floor"></div>
+			<div if="ceiling"></div>
+		</div>
 
 		<br>
 		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
